Bug 437848 Moving a local folder with subfolders causes infinite recursion. p=Siddharth Agarwal <sid1337@gmail.com>,r=me,sr=bienvenu