mailnews/local/test/unit/test_localSubFolders.js
@@ -98,18 +98,55 @@ function run_test() {
               folder);
   do_check_eq(number.value, 1);
 
+  // Test - Move folders around
+
+  var folder3 = root.addSubfolder("folder3");
+  var folder3Local = folder3.QueryInterface(Components.interfaces.nsIMsgLocalMailFolder);
+  folder3Local.copyFolderLocal(folder, true, null, null);
+
+  // Test - Get the new folders, make sure the old ones don't exist
+
+  var folder1Moved = folder3.getChildNamed("folder1");
+  var folder2Moved = folder1Moved.getChildNamed("folder2");
+
+  thrown = false;
+  try {
+    root.getChildNamed("folder1");
+  }
+  catch (e) {
+    thrown = true;
+  }
+
+  do_check_true(thrown);
+
+  do_check_false(folder.filePath.exists());
+  do_check_false(folder2.filePath.exists());
+
+  // Move folders back, get them
+  var rootLocal = root.QueryInterface(Components.interfaces.nsIMsgLocalMailFolder);
+  rootLocal.copyFolderLocal(folder1Moved, true, null, null);
+  folder = root.getChildNamed("folder1");
+  folder2 = folder.getChildNamed("folder2");
+
   // Test - propagateDelete (this tests recursiveDelete as well)
 
   var path1 = folder.filePath;
   var path2 = folder2.filePath;
+  var path3 = folder3.filePath;
 
   do_check_true(path1.exists());
   do_check_true(path2.exists());
+  do_check_true(path3.exists());
+
+  // First try deleting folder3 -- folder1 and folder2 paths should still exist
+  root.propagateDelete(folder3, true, null);
+
+  do_check_true(path1.exists());
+  do_check_true(path2.exists());
+  do_check_false(path3.exists());
 
   root.propagateDelete(folder, true, null);
 
   do_check_false(path1.exists());
   do_check_false(path2.exists());
-
-
 }
